# 🐻‍❄️📦 charted-server: Free, open source, and reliable Helm Chart registry made in Rust
# Copyright 2022-2023 Noelware, LLC. <team@noelware.org>
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("//:build/rust_project.bzl", "rust_project")

rust_project(
    name = "sessions",
    proc_macro_deps = ["@crate_index//:async-trait"],

    # we can't do `--cfg=tokio_unstable` anyway
    # https://github.com/bazelbuild/rules_rust/issues/1950
    rustc_flags = ["--cfg=tokio_unstable"],
    deps = [
        "//crates/common:charted_common",
        "//crates/redis:charted_redis",
        "@crate_index//:eyre",
        "@crate_index//:serde",
        "@crate_index//:serde_json",
        "@crate_index//:sqlx",
        "@crate_index//:tokio",
        "@crate_index//:tokio-util",
        "@crate_index//:tracing",
        "@crate_index//:uuid",
    ],
)
