# 🐻‍❄️🪆 tatsuki: Dead simple job scheduling library
# Copyright (c) 2024 Noel Towa <cutie@floofy.dev>
#
# Permission is hereby granted, free of charge, to any person obtaining a copy
# of this software and associated documentation files (the "Software"), to deal
# in the Software without restriction, including without limitation the rights
# to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
# copies of the Software, and to permit persons to whom the Software is
# furnished to do so, subject to the following conditions:
#
# The above copyright notice and this permission notice shall be included in all
# copies or substantial portions of the Software.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
# OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
# SOFTWARE.

[package]
name = "tatsuki"
description = "🐻‍❄️🪆 Dead simple asynchronous job scheduler that is async runtime-agnostic"
version = "0.1.0"
authors = ["Noel Towa <cutie@floofy.dev>"]
categories = ["asynchronous"]
edition = "2021"
license = "MIT"
repository = "https://github.com/auguwu/tatsuki"
rust-version = "1.74"

[features]
async-std = ["dep:async-std"]
cron = ["dep:cron", "dep:chrono"]
log = ["dep:log"]
tracing = ["dep:tracing"]
tokio = ["tokio/rt", "tokio/time"]
default = ["cron", "tokio"]

[dependencies]
async-std = { version = "1.12.0", optional = true }
async-trait = "0.1.77"
chrono = { optional = true, workspace = true }
cron = { version = "0.12.0", optional = true }
log = { version = "0.4.21", optional = true }
pin-project-lite = "0.2.13"
tokio = { version = "1.36.0", features = ["macros"] }
tokio-util = "0.7.10"
tracing = { version = "0.1.40", optional = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[example]]
name = "tokio"
required-features = ["tokio"]

[[example]]
name = "cron"
required-features = ["cron", "tokio"]
