# 🐻‍❄️🗻 tatsuki: Dead simple asynchronous job scheduler that is runtime-agnostic.
# Copyright 2024 Noel Towa <cutie@floofy.dev>
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "tatsuki"
description = "🐻‍❄️🗻 tatsuki: Dead simple asynchronous job scheduler that is runtime-agnostic"
version = "0.1.0"
authors = ["Noel Towa <cutie@floofy.dev>"]
categories = ["asynchronous"]
edition = "2021"
license = "MIT"
repository = "https://github.com/auguwu/tatsuki"
rust-version = "1.76"

[features]
default = ["cron", "tokio"]

tracing = ["dep:tracing"]
tokio = ["tokio/rt", "tokio/time"]
serde = ["dep:serde"]
cron = ["dep:cron"]
log = ["dep:log"]

[dependencies]
chrono.workspace = true
cron = { version = "0.12.1", optional = true }
log = { version = "0.4.22", optional = true }
pin-project-lite = "0.2.14"
serde = { workspace = true, optional = true }
tokio.workspace = true
tokio-util = "0.7.12"
tracing = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(noeldoc)'] }

[package.metadata.cargo-machete]
ignored = ["serde"]
