# 🐻‍❄️📦 charted-server: Free, open source, and reliable Helm Chart registry made in Rust
# Copyright 2022-2024 Noelware, LLC. <team@noelware.org>
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "charted-types"
description = "🐻‍❄️📦 Types for database objects, Helm, and more"
version.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
azalia = { workspace = true, features = ["config"] }
chrono.workspace = true
semver.workspace = true
serde.workspace = true
utoipa.workspace = true

# [dependencies]
# azalia.workspace = true
# charted-common = { version = "0.1.0-beta", path = "../common" }
# charted-search = { version = "0.1.0-beta", path = "../search" }
# chrono.workspace = true
# noelware-config.workspace = true
# semver.workspace = true
# serde.workspace = true
# serde_json.workspace = true
# sqlx.workspace = true
# utoipa.workspace = true
# tracing.workspace = true
# validator.workspace = true

# [dev-dependencies]
# serde_yaml.workspace = true
