# 🐻‍❄️📦 charted-server: Free, open source, and reliable Helm Chart registry made in Rust
# Copyright 2022-2025 Noelware, LLC. <team@noelware.org>
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "charted-types"
description = "🐻‍❄️📦 Generic crate that holds all database entity types and newtype wrappers."
version.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(noeldoc)'] }

[features]
default = []

jsonschema = ["dep:schemars"]
openapi = ["dep:utoipa"]

__internal_db = ["dep:sea-orm"]

[dependencies]
chrono.workspace = true
charted-core.workspace = true
derive_more = { workspace = true, features = ["display", "from", "deref"] }
paste = "1.0.15"
schemars = { workspace = true, optional = true }
sea-orm = { workspace = true, optional = true }
semver = { version = "1.0.25", features = ["serde"] }
serde.workspace = true
serde_json.workspace = true
ulid = { version = "1.1.4", features = ["serde"] }
utoipa = { workspace = true, optional = true }
