# 🐻‍❄️📦 charted-server: Free, open source, and reliable Helm Chart registry made in Rust
# Copyright 2022-2023 Noelware, LLC. <team@noelware.org>
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "charted-server-proc-macro"
description = "🐻‍❄️📦 Procedural macros to help aid building charted's API server"
version = "0.0.0-devel.0"
edition = "2021"
homepage = "https://charts.noelware.org"
authors = ["Noel Towa <cutie@floofy.dev>", "Noelware Team <team@noelware.org>"]

[lib]
proc-macro = true

[dependencies]
charted-common = { version = "0.0.0-devel.0", path = "../../crates/common" }
charted-proc-macros = { version = "0.0.0-devel.0", path = "../../crates/proc-macros" }
heck = "0.4.1"
proc-macro2 = "1.0.70"
quote = "1.0.33"
syn = "2.0.41"
utoipa = "4.1.0"
